# dxid-l0

./: .dockerignore  .gitignore  .railwayignore  API_KEY_MANAGEMENT_FIX.md  API_PRODUCTION_READY_SUMMARY.md  API_REVIEW_AND_FIXES.md  ARCHITECTURE_OVERVIEW.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERSION.md  Dockerfile  Dockerfile.simple  Dockerfile.test  Dockerfile.test-minimal  FORCE_DEPLOY.md  FORCE_RAILWAY_REBUILD.md  NETWORK_DISCOVERY.md  NETWORK_SETUP_GUIDE.md  OPTIMAL_P2P_DISCOVERY.md  OPTIMIZATION_SUMMARY.md  ORACLE_CLOUD_QUICK_REFERENCE.md  ORACLE_CLOUD_SETUP_GUIDE.md  PRODUCTION_ANALYSIS.md  PRODUCTION_READY_SUMMARY.md  QUICK_SETUP_GUIDE.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  RENDER_DEPLOYMENT.md  USER_GUIDE.md  deploy-railway.md  dxid-config.toml  fix_api_key.ps1  nixpacks.toml  railway.json  railway.toml  render.yaml  test_state_root.rs  test_zk_encryption.rs
auxiliary-services/explorer/: package.json  render.yaml
auxiliary-services/faucet/: railway.json
deployment/: deploy-validator.sh  dxid-validator.service
dxid-bridge/: Cargo.toml
dxid-bridge/src/: lib.rs  main.rs
dxid-cli/: Cargo.toml
dxid-cli-enhanced/: Cargo.toml  resources.rc
dxid-cli-enhanced/src/: main.rs
dxid-cli/src/: main.rs
dxid-crypto/: Cargo.toml
dxid-crypto/src/: lib.rs  starksig.rs
dxid-integration/: Cargo.toml
dxid-integration/src/: lib.rs
dxid-node/: Cargo.toml
dxid-node/src/: main.rs
dxid-node/src/api/: errors.rs  middleware.rs  mod.rs  responses.rs  validation.rs
dxid-p2p/: Cargo.toml
dxid-p2p/src/: discovery.rs  lib.rs  types.rs
dxid-runtime/: Cargo.toml
dxid-runtime/src/: lib.rs  smt.rs  storage.rs
dxid-smt/: Cargo.toml
dxid-smt/src/: lib.rs
dxid-zk-snark/: Cargo.toml
dxid-zk-snark/src/: circuit_system.rs  cross_module_verification.rs  lib.rs  transaction_encryption.rs
dxid-zk-stark/: Cargo.toml
dxid-zk-stark/src/: blockchain_encryption.rs  lib.rs  module_encryption.rs  proof_system.rs
sdk-js/: package.json  tsconfig.json
sdk-js/src/: index.ts
zk_test/: Cargo.toml
zk_test/src/: main.rs
