[workspace]
members = [
  "dxid-smt",
  "dxid-runtime", 
  "dxid-crypto",
  "dxid-node",
  "dxid-cli-enhanced",
  "dxid-integration"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["dxID Contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "net", "sync"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tokio-stream = { version = "0.1", features = ["sync", "broadcast"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
once_cell = "1.19"
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "macros"] }
