[package]
name = "dxid-bridge"
version = "0.1.0"
edition = "2021"
description = "dxID Bridge - Connect Layer0 to Layer1 Blockchains"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
web3 = "0.19"
ethers = { version = "2.0", features = ["ws", "rustls"] }
bitcoin = "0.30"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
