[package]
name = "dxid-cli-enhanced"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
hex = "0.4"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
winapi = { version = "0.3", features = ["winuser", "shellapi", "commctrl", "shellapi"] }

# Local dependencies
dxid-crypto = { path = "../dxid-crypto" }
dxid-runtime = { path = "../dxid-runtime" }
dxid-integration = { path = "../dxid-integration", optional = true }
dxid-p2p = { path = "../dxid-p2p", optional = true }

[features]
default = []
full_zk = ["dxid-integration", "dxid-p2p"]
