[package]
name = "dxid-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }

dxid-crypto = { path = "../dxid-crypto" }
dxid-runtime = { path = "../dxid-runtime" }
