[package]
name = "dxid-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
blake3 = "1"
hex = "0.4"
bincode = "2.0"

# STARK framework dependencies
winterfell = { version = "0.8", optional = true }
winter-math = { version = "0.8", optional = true }
winter-utils = { version = "0.8", optional = true }

[features]
default = ["dev_engine"]
dev_engine = []
stark_winterfell = ["winterfell", "winter-math", "winter-utils"]
