[package]
name = "dxid-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
bincode = "1.3"

# Internal dependencies
dxid-p2p = { path = "../dxid-p2p" }
dxid-zk-stark = { path = "../dxid-zk-stark", optional = true }
dxid-zk-snark = { path = "../dxid-zk-snark", optional = true }

[features]
default = []
full_zk = ["dxid-zk-stark", "dxid-zk-snark"]
