[package]
name = "dxid-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
clap = { version = "4.5", features = ["derive"] }
dxid-runtime = { path = "../dxid-runtime" }
dxid-crypto = { path = "../dxid-crypto" }
dxid-smt = { path = "../dxid-smt" }
dxid-p2p = { path = "../dxid-p2p" }      

futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
parking_lot = "0.12"
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
blake3 = "1"
