[package]
name = "dxid-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"