[package]
name = "dxid-zk-stark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2.0"
hex = "0.4"
rand = "0.8"
blake3 = "1"

# Real ZK-STARK dependencies
winterfell = "0.8"
winter-math = "0.8"
winter-utils = "0.8"
winter-crypto = "0.8"

# For field arithmetic
ff = "0.13"
group = "0.13"

# For lazy initialization
once_cell = "1.19"

# For async testing
tokio = { version = "1", features = ["full"] }

# Additional crypto dependencies
sha2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
poly1305 = "0.8"
aead = "0.5"

[features]
default = ["winterfell"]
winterfell = []
